fixing button text color, fixing active nav item indicator on mobile

--- a/_sass/_uswds-theme-custom-styles.scss
+++ b/_sass/_uswds-theme-custom-styles.scss
@@ -55,6 +55,11 @@ $logo-size-md: 2rem;
 }
 
 // Links
+p.usa-button a {
+  color: $color-white;
+  text-decoration: none;
+}
+
 a {
   color: $color-medium;
 }
@@ -68,7 +73,6 @@ a:hover {
 .usa-header--extended .usa-current:hover::after,
 .usa-nav__primary>.usa-nav__primary-item > .usa-current:hover::after {
   background-color: $color-bright;
-  height: units(0.5);
 }
 
 .usa-nav__primary>.usa-nav__primary-item > .usa-current,
@@ -78,10 +82,6 @@ a:hover {
 
 .usa-nav__primary>.usa-nav__primary-item > a:hover {
   background-color: $color-gray-lightest;
-}
-
-.usa-nav__primary>.usa-nav__primary-item > a:hover::after {
-  height: 0;
 }
 
 .usa-nav__secondary-links {
